[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player/player_kinematic_body.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/player.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/player/dialog_box.gd" type="Script" id=3]
[ext_resource path="res://scenes/player/debug_info.gd" type="Script" id=4]
[ext_resource path="res://assets/player/light.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/player_light.gd" type="Script" id=6]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 30 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
collision_mask = 806924
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "idle"
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 18, 30, 18, 24, 15, 12, 15, -10, 8, -15, 8, -30, -8, -30, -8, -15, -15, -10, -15, 12, -18, 24, -18, 30 )

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 11, 10 )

[node name="ActionPrompt" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -65.0
margin_right = 25.0
margin_bottom = -34.0
text = "Press
\"Enter\""
align = 1

[node name="EnterCrypt" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 128
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterCrypt"]
shape = SubResource( 1 )

[node name="ExitCrypt" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 256
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitCrypt"]
shape = SubResource( 1 )

[node name="TalkWithPlayer" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 1024
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkWithPlayer"]
shape = SubResource( 1 )

[node name="UI" type="Node2D" parent="."]

[node name="DialogBox" type="Polygon2D" parent="UI"]
editor/display_folded = true
visible = false
position = Vector2( 0, -150 )
z_index = 10
color = Color( 0.25098, 0.25098, 0.25098, 1 )
polygon = PoolVector2Array( -200, 0, 200, 0, 200, 100, -200, 100 )
script = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="UI/DialogBox"]
margin_left = -190.0
margin_top = 5.0
margin_right = 10.0
margin_bottom = 20.0
text = "Title
"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="UI/DialogBox"]
margin_left = -190.0
margin_top = 20.0
margin_right = 190.0
margin_bottom = 75.0
bbcode_text = "Content"
text = "Content"

[node name="ExitPrompt" type="Label" parent="UI/DialogBox"]
margin_left = -190.0
margin_top = 80.0
margin_right = -106.0
margin_bottom = 94.0
text = "Press \"Enter\""

[node name="DebugInfo" type="CanvasLayer" parent="UI"]
editor/display_folded = true
script = ExtResource( 4 )

[node name="CryptSeed" type="Label" parent="UI/DebugInfo" groups=[
"debug_info",
]]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Health" type="Label" parent="UI/DebugInfo" groups=[
"debug_info",
]]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( -140.242, -29.6749 )

[node name="Weapon" type="Label" parent="UI/DebugInfo" groups=[
"debug_info",
]]
margin_top = 40.0
margin_right = 40.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( -140.242, -29.6749 )

[node name="PlayerLight" type="Light2D" parent="."]
texture = ExtResource( 5 )
script = ExtResource( 6 )
[connection signal="area_entered" from="EnterCrypt" to="." method="_on_EnterCrypt_area_entered"]
[connection signal="area_exited" from="EnterCrypt" to="." method="_on_EnterCrypt_area_exited"]
[connection signal="area_entered" from="ExitCrypt" to="." method="_on_ExitCrypt_area_entered"]
[connection signal="area_exited" from="ExitCrypt" to="." method="_on_ExitCrypt_area_exited"]
[connection signal="area_entered" from="TalkWithPlayer" to="." method="_on_TalkWithPlayer_area_entered"]
[connection signal="area_exited" from="TalkWithPlayer" to="." method="_on_TalkWithPlayer_area_exited"]
